<resources>
    <string name="app_name">BusinessApp</string>
    <string name="phone">0281 2235143</string>
    <string name="add1">Vikas Publicity</string>
    <string name="add2">401 AmarDeep Complex,2 RajputparaRajkot - Gujarat - INDIA</string>
    <string name="header">Head Office : Rajkot,Gujarat,India</string>
    <string name="email">vikaspublicity198456@gmail.com</string>
    <string name="about_us">Vikas Publicity was formed in 1984 by Mr. Mahendra Indubhai Mehta with the sole aim of giving the best services with superior design layouts and correct guidance to all our esteem clients, and now has already carved for itself an enviable niche in the field of National and International Newspaper and Magazine Publicity.</string>
</resources>
