<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.udacity.business.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/mImg_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/mImg_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/mImg_logo"
                    android:layout_marginTop="10dp"
                    android:text="@string/about_us"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mImg_banner"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/lightgray"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/mImg_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_location" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/mImg_location">

                        <TextView
                            android:id="@+id/mTxt_header"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/header"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/mTxt_add1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/mTxt_header"
                            android:text="@string/add1"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/mTxt_add2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/mTxt_add1"
                            android:text="@string/add2"
                            android:textSize="18sp" />

                    </RelativeLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/lightgray"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/mImg_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_email" />

                    <TextView
                        android:id="@+id/mTxt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/mImg_email"
                        android:text="@string/email"
                        android:textSize="18sp"
                        android:autoLink="email"
                        android:textColorLink="@android:color/black"
                        android:textStyle="italic" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/lightgray"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/mImg_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_call" />

                    <TextView
                        android:id="@+id/mTxt_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/mImg_phone"
                        android:autoLink="phone"
                        android:text="@string/phone"
                        android:textSize="18sp"
                        android:textColorLink="@android:color/black"
                        android:textStyle="italic" />

                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>